--- a/src/app/components/listado-mascotas/listado-mascotas.html
+++ b/src/app/components/listado-mascotas/listado-mascotas.html
@@ -9,7 +9,7 @@
             <th mat-header-cell *matHeaderCellDef> Nombre </th>
             <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
         </ng-container>
-        
+
         <ng-container matColumnDef="edad">
             <th mat-header-cell *matHeaderCellDef> Edad </th>
             <td mat-cell *matCellDef="let element"> {{element.edad}} </td>
@@ -33,5 +33,8 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
+
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements">
+    </mat-paginator>
 
 </div>
