--- a/src/app/components/listado-mascotas/listado-mascotas.html
+++ b/src/app/components/listado-mascotas/listado-mascotas.html
@@ -3,15 +3,15 @@
 </div>
 
 <div class="container">
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z0">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z0" matSort>
 
         <ng-container matColumnDef="nombre">
-            <th mat-header-cell *matHeaderCellDef> Nombre </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre </th>
             <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
         </ng-container>
 
         <ng-container matColumnDef="edad">
-            <th mat-header-cell *matHeaderCellDef> Edad </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Edad </th>
             <td mat-cell *matCellDef="let element"> {{element.edad}} </td>
         </ng-container>
 
