Iconos y modulo Shared

--- a/src/app/components/listado-mascotas/listado-mascotas.css
+++ b/src/app/components/listado-mascotas/listado-mascotas.css
@@ -20,3 +20,19 @@ td, th {
   font-size: 14px;
   width: 100%;
 }
+
+.delete {
+    cursor: pointer;
+    color: #E15639
+}
+.edit {
+    cursor: pointer;
+    color: #1878B0;
+}
+.ver {
+    cursor: pointer;
+}
+.agregar {
+    font-size: 10px;
+    line-height: 28px;
+}
