--- a/src/app/components/listado-mascotas/listado-mascotas.html
+++ b/src/app/components/listado-mascotas/listado-mascotas.html
@@ -34,6 +34,17 @@
             <td mat-cell *matCellDef="let element"> {{element.peso}} </td>
         </ng-container>
 
+        <ng-container matColumnDef="acciones">
+            <th mat-header-cell *matHeaderCellDef>
+                <button class="agregar" matButton="filled">Agregar</button>
+            </th>
+            <td mat-cell *matCellDef="let element">
+                <mat-icon matTooltip="Ver" class="ver" fontIcon="search"></mat-icon>
+                <mat-icon matTooltip="Editar" class="edit" fontIcon="edit"></mat-icon>
+                <mat-icon matTooltip="Borrar" class="delete" fontIcon="delete"></mat-icon>
+            </td>
+        </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
