--- a/src/app/components/listado-mascotas/listado-mascotas.html
+++ b/src/app/components/listado-mascotas/listado-mascotas.html
@@ -36,11 +36,11 @@
 
         <ng-container matColumnDef="acciones">
             <th mat-header-cell *matHeaderCellDef>
-                <button class="agregar" matButton="filled">Agregar</button>
+                <button [routerLink]="['/agregarMascota']" class="agregar" matButton="filled">Agregar</button>
             </th>
             <td mat-cell *matCellDef="let element">
-                <mat-icon matTooltip="Ver" class="ver" fontIcon="search"></mat-icon>
-                <mat-icon matTooltip="Editar" class="edit" fontIcon="edit"></mat-icon>
+                <mat-icon [routerLink]="['/verMascota/1']" matTooltip="Ver" class="ver" fontIcon="search"></mat-icon>
+                <mat-icon [routerLink]="['/editarMascota/2']" matTooltip="Editar" class="edit" fontIcon="edit"></mat-icon>
                 <mat-icon matTooltip="Borrar" class="delete" fontIcon="delete"></mat-icon>
             </td>
         </ng-container>
