--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,16 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+.title {
+    background-color: #666;
+    padding: 30px;
+    color: white;
+    text-align: center;
+}
+
+
+.container {
+    margin: 0 20%;
+}
