--- a/src/app/components/agregar-editar-mascota/agregar-editar-mascota.html
+++ b/src/app/components/agregar-editar-mascota/agregar-editar-mascota.html
@@ -1,1 +1,54 @@
-<p>agregar-editar-mascota works!</p>
+<div class="title">
+    <h1>Agregar Mascota</h1>
+</div>
+
+@if (loading) {
+<app-spinner></app-spinner>
+}
+
+<div class="container">
+    <mat-card class="card">
+        <mat-card-subtitle class="padding-bottom subtitle">Datos de la Mascota</mat-card-subtitle>
+        <form>
+            <mat-grid-list cols="2" rowHeight="80px">
+                <mat-grid-tile class="padding-bottom" [colspan]="2">
+                    <mat-form-field class="fullWidth" appearance="outline">
+                        <mat-label>Nombre</mat-label>
+                        <input autocomplete="off" matInput>
+                    </mat-form-field>
+                </mat-grid-tile>
+
+                <mat-grid-tile class="padding-bottom">
+                    <mat-form-field class="fullWidth" appearance="outline">
+                        <mat-label>Raza</mat-label>
+                        <input autocomplete="off" matInput>
+                    </mat-form-field>
+                </mat-grid-tile>
+                <mat-grid-tile class="padding-bottom">
+                    <mat-form-field class="fullWidth" appearance="outline">
+                        <mat-label>Color</mat-label>
+                        <input autocomplete="off" matInput>
+                    </mat-form-field>
+                </mat-grid-tile>
+                <mat-grid-tile class="padding-bottom">
+                    <mat-form-field class="fullWidth" appearance="outline">
+                        <mat-label>Edad</mat-label>
+                        <input autocomplete="off" matInput>
+                    </mat-form-field>
+                </mat-grid-tile>
+
+                <mat-grid-tile class="padding-bottom">
+                    <mat-form-field class="fullWidth" appearance="outline">
+                        <mat-label>Peso</mat-label>
+                        <input autocomplete="off" matInput>
+                    </mat-form-field>
+                </mat-grid-tile>
+                <mat-grid-tile class="padding-bottom" [colspan]="2">
+                    <button  class="margin-right" matButton="filled">Aceptar</button>
+                     <button routerLink="/listMascotas" matButton="outlined">Volver</button> 
+                </mat-grid-tile>
+            </mat-grid-list>
+
+        </form>
+    </mat-card>
+</div>
