Renderizamos mascotas en la grilla

--- a/src/app/components/listado-mascotas/listado-mascotas.html
+++ b/src/app/components/listado-mascotas/listado-mascotas.html
@@ -2,8 +2,9 @@
     <h1>Listado de Mascotas</h1>
 </div>
 @if(loading) {
-    <app-spinner></app-spinner>
+<app-spinner></app-spinner>
 }
+@if (dataSource.data.length > 0 ) {
 <div class="container">
     <mat-form-field>
         <mat-label>Buscar</mat-label>
@@ -42,7 +43,8 @@
             </th>
             <td mat-cell *matCellDef="let element">
                 <mat-icon [routerLink]="['/verMascota/1']" matTooltip="Ver" class="ver" fontIcon="search"></mat-icon>
-                <mat-icon [routerLink]="['/editarMascota/2']" matTooltip="Editar" class="edit" fontIcon="edit"></mat-icon>
+                <mat-icon [routerLink]="['/editarMascota/2']" matTooltip="Editar" class="edit"
+                    fontIcon="edit"></mat-icon>
                 <mat-icon (click)="eliminarMascota()" matTooltip="Borrar" class="delete" fontIcon="delete"></mat-icon>
             </td>
         </ng-container>
@@ -55,3 +57,4 @@
     </mat-paginator>
 
 </div>
+}
